--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
 [submodule "opensbi"]
 	path = opensbi
 	url = git@github.com:dtometzki/opensbi.git
+	branch = JH7110_VisionFive2_devel
 [submodule "linux"]
 	path = linux
 	url = https://github.com/starfive-tech/linux.git
+	branch = JH7110_VisionFive2_devel
 [submodule "starfive"]
 	path = starfive
 	url = git@github.com:dtometzki/starfive.git
 [submodule "u-boot"]
 	path = u-boot
 	url = git@github.com:dtometzki/u-boot.git
+	branch = JH7110_VisionFive2_devel
