--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 	path = u-boot
 	url = git@github.com:dtometzki/u-boot.git
 	branch = JH7110_VisionFive2_devel
+[submodule "Tools"]
+	path = Tools
+	url = https://github.com/starfive-tech/Tools.git
+	branch = master
